fix admin name font and spacing

--- a/ckanext/honduras/fanstatic/less/custom.less
+++ b/ckanext/honduras/fanstatic/less/custom.less
@@ -935,6 +935,8 @@ a.tag:hover {
 }
 .context-info h1.heading {
     font-weight:bold;
+    font-family: 'Lato', sans-serif;
+    margin-top:30px;
 }
 /**** Responsive CSS *****/
  
